<resources>
    <string name="app_name">MathPath</string>
    <string name="action_websearch">Web search</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="communicate">Communicate</string>
    <string name="category">Category</string>
    <string name="elementary">Elementary</string>
    <string name="share">Share</string>
    <string name="next">Next</string>
    <string name="quit">Quit</string>
    <string name="stats">Stats</string>
    <string name="elementary1">Elementary 1</string>
    <string name="elementary2">Elementary 2</string>
    <string name="title_activity_settings">Settings</string>

    <string name="steps">Steps</string>
    <string name="time">Time Chase</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_game_type">Game Type</string>

    <string-array name="pref_list_game_type">
        <item>10 Steps</item>
        <item>Time Chase</item>
    </string-array>

    <string-array name="pref_list_game_type_values">
        <item>steps</item>
        <item>time</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings">Settings</string>
    <string name="game_type">Game Type</string>
    <string name="step_num">Steps</string>
    <string name="numbers_range">Numbers Range</string>
    <string name="operators">Operators</string>
    <string name="operands">Operands</string>
    <string name="time_seconds">Seconds</string>
    <string name="show_answers"><u>Show Answers</u></string>
    <string name="check_fix_num_operands">Set fixed number of operands</string>
    <string name="start">Start</string>
    <string name="valid_operators">Please check at least one operator!</string>
    <string name="valid_range">Not a valid range of numbers!</string>
    <string name="valid_steps">You need to set at least 1 step!</string>
    <string name="valid_time">You need to set at least 10 seconds of time!</string>
</resources>
