<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/category">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_category"
                    android:icon="@drawable/ic_menu_category"
                    android:title="@string/elementary"
                    />
            </group>
        </menu>
    </item>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share"
                />

        </menu>
    </item>

    <item android:title="@string/stats">
        <menu>
            <item
                android:id="@+id/nav_stats"
                android:icon="@drawable/ic_menu_stats"
                android:title="@string/stats" />
        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/action_settings" />
    </group>


</menu>
